--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-12-04 Version: 1.2.1
+- Update API ListJobs: add request parameters sortOrder.
+
+
 2025-11-12 Version: 1.2.0
 - Support API GetPreSignedUrlForPutObject.
 
